--- a/index.html
+++ b/index.html
@@ -6,25 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;1,300&family=Roboto:wght@400;500;700&display=swap');
+
+        :root{
+            --yellow:#FBD44A;
+            --blue:#2269B9;
+            --red:#D2381F;
+        }
+
+
+
         body{
             height: 100vh;
             margin: 0;
             overflow: hidden;
+            font-family: 'Lato', sans-serif;
         }
 
         .page{
             position: relative;
             height: 100vh;
+            width: 100%;
         }
 
         .container{
             position: absolute;
             z-index: 1;
+            display: grid;
+            grid-template-columns: 55% 45%;
+            grid-template-rows: 20% 50% 30%;
+            grid-template-areas: "nav     aside"
+                                 "section aside"
+                                 "footer  aside";
+            height: 100%;
+            width: 100%;
         }
         
         /*------- Animation Preloader----------- */
         .loader{
-            background:#FBD44A ;
+            background:var(--yellow);
             width: 100%;
             height: 100%;
             display: flex;
@@ -151,12 +171,14 @@
             </section>
         </section>
         <!-- -------------------------------- -->
+
         <!-- Loader -->
         <section class="loader">
             <div></div>
             <div></div>
             <div></div>
         </section>
+
 
         <!-- Modal -->
         <section>
