--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <section class="side-content">
                 <p>Súper Man</p>
-                <img src="" alt="">
+                <img src="img/super-man.png" alt="superman">
                 <div></div>
             </section>
 
