structure footer and img added

--- a/index.html
+++ b/index.html
@@ -41,20 +41,21 @@
             <!-- ----------- -->
 
             <section class="side-content">
+                
                 <p>Súper Man</p>
                 <img src="img/super-man.png" alt="superman">
                 <div></div>
             </section>
 
-            <section>
+            <section class="footer">
                 <div>
-                    <img src="" alt="">
+                    <img src="img/spiderman.png" alt="">
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="img/robin.png" alt="">
                 </div>
                 <div>
-                    <img src="" alt="">
+                    <img src="img/batman.png" alt="">
                 </div>
             </section>
         </section>
