--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <img class="modal__close" src="https://img.icons8.com/ios/50/000000/cancel.png"/>
 
                 <div class="modal__slider">
-                    <input type="radio" name="slider-1" id="radio-1" checked>
-                    <input type="radio" name="slider-1" id="radio-2" >
-                    <input type="radio" name="slider-1" id="radio-3" >
+                    <input class="modal__input" type="radio" name="slider-1" id="radio-1" checked>
+                    <input class="modal__input" type="radio" name="slider-1" id="radio-2" >
+                    <input class="modal__input" type="radio" name="slider-1" id="radio-3" >
 
                     <div class="cards">
                         <label for="radio-1" id="card-1" class="card">
@@ -97,27 +97,6 @@
         </section>
 
     </div>
-
-
-
-<script>
-    const modal = document.querySelector('.modal');
-    const button1 = document.querySelector('#button1');
-    const closeb = document.querySelector('.modal__close')
-
-    button1.addEventListener('click', () => {
-        modal.classList.remove('hidden');
-        modal.classList.add('visible');
-    });
-
-
-    closeb.addEventListener('click', () => {
-        modal.classList.add('hidden');
-        modal.classList.remove('visible');
-    });
-
-
-
-</script>    
+<script src="JS/main.js" ></script>    
 </body>
 </html>
