add files and modified html, css

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
             <section class="side-content">
                 
-                <p>Súper Man</p>
-                <img src="img/super-man.png" alt="superman">
+                <p class="side-content__p" >Súper Man</p>
+                <img class="side-content__img" src="img/super-man.png" alt="superman">
                 <div></div>
             </section>
 
@@ -90,6 +90,62 @@
 
                         <label for="radio-3" id="card-3" class="card">
                             <img src="img/spider3.png" alt="">
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Modal -->
+        <section class="modal2 hidden">
+            <div class="modal2__content">
+                <img class="modal2__close" src="https://img.icons8.com/ios/50/000000/cancel.png"/>
+
+                <div class="modal2__slider">
+                    <input class="modal2__input" type="radio" name="slider-1" id="radio-4" checked>
+                    <input class="modal2__input" type="radio" name="slider-1" id="radio-5" >
+                    <input class="modal2__input" type="radio" name="slider-1" id="radio-6" >
+
+                    <div class="cards">
+                        <label for="radio-4" id="card-4" class="card">
+                            <img src="img/robin2.png" alt="">
+                        </label>
+
+                        <label for="radio-5" id="card-5" class="card">
+                            <img src="img/robin3.png" alt="">
+                        </label>
+
+                        <label for="radio-6" id="card-6" class="card">
+                            <img src="img/robin4.png" alt="">
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Modal -->
+        <section class="modal3 hidden">
+            <div class="modal3__content">
+                <img class="modal3__close" src="https://img.icons8.com/ios/50/000000/cancel.png"/>
+
+                <div class="modal3__slider">
+                    <input class="modal3__input" type="radio" name="slider-1" id="radio-7" checked>
+                    <input class="modal3__input" type="radio" name="slider-1" id="radio-8" >
+                    <input class="modal3__input" type="radio" name="slider-1" id="radio-9" >
+
+                    <div class="cards">
+                        <label for="radio-7" id="card-7" class="card">
+                            <img src="img/batman2.png" alt="">
+                        </label>
+
+                        <label for="radio-8" id="card-8" class="card">
+                            <img src="img/batman3.png" alt="">
+                        </label>
+
+                        <label for="radio-9" id="card-9" class="card">
+                            <img src="img/batman4.png" alt="">
                         </label>
                     </div>
                 </div>
